Altering z-index of the ".profiler-results" so that it's always on top. Issues with sites that have other elements with a z-index of anything other than 0.

--- a/MvcMiniProfiler/UI/Includes.less
+++ b/MvcMiniProfiler/UI/Includes.less
@@ -207,6 +207,7 @@
 
 // ajaxed-in results will be appended to this
 .profiler-results {
+    z-index: 9999;
     position:fixed;
     top:0px;
 
